--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,8 @@
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Boton 1</a>
         <a href="{{ site.github.tar_url }}" class="btn">Boton 2</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Boton 3</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Boton 4</a>
       {% endif %}
     </header>
 
