--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Boton 1</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Boton 2</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Boton 3</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Boton 4</a>
+        <a href="{{ site.github.zip_url }}" class="btn">Caso Clinico</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Entregables</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Miembros</a>
+        <a href="{{ site.github.tar_url }}" class="btn">Contexto</a>
       {% endif %}
     </header>
 
