--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,10 +29,10 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.show_downloads %}
-        <a href="{{ site.github.zip_url }}" class="btn">Caso Clinico</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Entregables</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Miembros</a>
-        <a href="{{ site.github.tar_url }}" class="btn">Contexto</a>
+        <a href="/CasoClinico/CasoClinico.html" class="btn">Caso Clinico</a>
+        <a href="/Entregables/Entregables.html" class="btn">Entregables</a>
+        <a href="/Miembros/Miembros.html" class="btn">Miembros</a>
+        <a href="/Contexto/Contexto.html" class="btn">Contexto</a>
       {% endif %}
     </header>
 
